[CARBONDATA-3260] Fix the Hive stats issue in carbon catalog table
Problem:
When carbon table is created hive calculate some junk stats keep it
in hive catalog table. From Spark 2.3 onwards spark considering the
hive stats to calculate the broadcast join, so it is not working.

Solution:
Set the hive stats to None in case of carbon table.

This closes #3082